# calamus

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CONTRIBUTING.rst  README.rst  pyproject.toml  pytest.ini  setup.py
.github/: CODEOWNERS
.github/workflows/: auto-update-setup-py.yaml  setup-py-creation.yaml  test.yml
calamus/: fields.py  schema.py  utils.py
calamus/backends/: __init__.py  neo4j.py
docs/: api.rst  conf.py  index.rst  license.rst  spelling_wordlist.txt
tests/: book_ontology.owl  test_annotation.py  test_deserialization.py  test_marshld.py  test_onotology_verification_deserialization.py  test_onotology_verification_serialization.py  test_ontology_verification_deserialization.py  test_ontology_verification_serialization.py  test_schema.py  test_serialization.py  test_string_serialization.py
