[tool.poetry]
name = "calamus"
version = "0.1.0"
description = ""
authors = ["Panaetius <ralf.grubenmann@sdsc.ethz.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
marshmallow = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pre-commit = "^2.3.0"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
